tests/resource/valid/collection/simple_index.mamba
def x := [1, 2, 3]
print(x[3])
print(x[0 ..= 2])
print(x[0 ..= 2 step 1])
