tests/resource/invalid/dummy/proj1/src/hello_world.mamba
def x := 10

print(x[10])
